--- a/northwind.web.ui/views/Shared/_Layout.cshtml
+++ b/northwind.web.ui/views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
       <a class="navbar-item" asp-controller="Customers" asp-action="Index">
         Customers
       </a>
+      <a class="navbar-item" asp-controller="Categories" asp-action="Index">
+        Categories
+      </a>
+      <a class="navbar-item" asp-controller="Products" asp-action="Index">
+        Products
+      </a>
     </div>
   </div>
 </nav>
