--- a/northwind.web.ui/views/_ViewImports.cshtml
+++ b/northwind.web.ui/views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using northwind.web.ui
 @using northwind.web.ui.models
 @using northwind.web.ui.setup
+@using Microsoft.AspNetCore.Http.Extensions
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, northwind.web.ui
