--- a/northwind.web.ui/views/Categories/_Form.cshtml
+++ b/northwind.web.ui/views/Categories/_Form.cshtml
@@ -21,4 +21,13 @@
     </div>
   </div>
 
+  
+  <div class="field is-horizontal">
+    <label class="is-normal field-label label" for="Id">Id</label>
+    <div class="field-body is-expanded control">
+      
+    </div>
+  </div>
+  
+  
 </form>
