--- a/northwind.web.ui/views/Customers/_Modal.cshtml
+++ b/northwind.web.ui/views/Customers/_Modal.cshtml
@@ -10,27 +10,10 @@
     <section class="modal-card-body">
       <div class="content">
         <form method="post" id="modal__form-@Model.ElementId">
-
           <input type="hidden" name="ReturnUrl" value="@EncodedUrl">
-          
-          <div class="field">
-            <label class="label" asp-for="Id"></label>
-            <div class="control">
-              <input class="input validation" asp-for="Id">
-            </div>
-          </div>
-          <div class="field">
-            <label class="label" asp-for="CompanyName"></label>
-            <div class="control">
-              <input class="input validation" asp-for="CompanyName">
-            </div>
-          </div>
-          <div class="field">
-            <label class="label" asp-for="Region"></label>
-            <div class="control">
-              <input class="input validation" asp-for="Region">
-            </div>
-          </div>
+          <nw-field nw-is-validation="true" asp-for="Id" />
+          <nw-field nw-is-validation="true" asp-for="CompanyName" />
+          <nw-field nw-is-validation="true" asp-for="Region" />
         </form>
       </div>
     </section>
@@ -53,6 +36,6 @@
 
 @functions{
 
-  string EncodedUrl => this.Context.Request.GetEncodedUrl();
+  string EncodedUrl => Context.Request.GetEncodedUrl();
 
 }
