--- a/northwind.web.ui/views/Products/Index.cshtml
+++ b/northwind.web.ui/views/Products/Index.cshtml
@@ -5,7 +5,7 @@
     <th scope="col" nw-column="Id" asp-controller="Products" nw-parameters="@Model.Parameters"
         nw-page="@Model.PagedResult.PageNumber" asp-for="PagedResult">
     </th>
-    <th scope="col" nw-column="ProductName" asp-controller="Products" nw-parameters="@Model.Parameters" 
+    <th scope="col" nw-column="ProductName" asp-controller="Products" nw-parameters="@Model.Parameters"
         nw-page="@Model.PagedResult.PageNumber">
     </th>
     <th scope="col">
@@ -40,16 +40,14 @@
 
 </table>
 
-<nav class="pagination" role="navigation">
-  <nw-pager
-    cs-paging-pagenumber="@Model.PagedResult.PageNumber"
-    cs-paging-pagesize="@Model.PagedResult.PageSize"
-    cs-paging-totalitems="@Model.PagedResult.TotalItems"
-    asp-controller="Products"
-    asp-action="Index"
-    asp-route-id="@Model.Parameters.Id"
-    asp-route-order="@Model.Parameters.OrderBy"
-    asp-route-name="@Model.Parameters.ProductName"
-    asp-descending="@Model.Parameters.IsDescending">
-  </nw-pager>
-</nav>
+<nw-pager
+  cs-paging-pagenumber="@Model.PagedResult.PageNumber"
+  cs-paging-pagesize="@Model.PagedResult.PageSize"
+  cs-paging-totalitems="@Model.PagedResult.TotalItems"
+  asp-controller="Products"
+  asp-action="Index"
+  asp-route-id="@Model.Parameters.Id"
+  asp-route-name="@Model.Parameters.ProductName"
+  nw-order="@Model.Parameters.OrderBy"
+  nw-descending="@Model.Parameters.IsDescending">
+</nw-pager>
