--- a/northwind.web.ui/views/Shared/_Layout.cshtml
+++ b/northwind.web.ui/views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,10 +36,13 @@
   </div>
 </nav>
 
+<div class="pb-2"></div>
+
 <div class="container is-fluid">
   @RenderBody()
 </div>
 
+<script src="~/js/validation.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
 @RenderSection("Scripts", false)
