--- a/northwind.web.ui/views/_ViewImports.cshtml
+++ b/northwind.web.ui/views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using northwind.web.ui.models
 @using northwind.web.ui.setup
 @using Microsoft.AspNetCore.Http.Extensions
+@using AutoMapper
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, northwind.web.ui
