--- a/northwind.web.ui/wwwroot/css/site.css
+++ b/northwind.web.ui/wwwroot/css/site.css
@@ -1,101 +1,32 @@
 ﻿/* Validation */
-
-/* required */
-input[required]:placeholder-shown ~ span.required {
-  display: inline-block;
+[data-nw-validation]:invalid:not(:placeholder-shown) {
+  color: #ee5f5b;
 }
 
-input[required]:not(:placeholder-shown) ~ span.required {
-  display: none;
+input[type="radio"][required]:invalid ~ span[data-nw-validation]::before {
+  content: "*";
+  color: #ee5f5b;
 }
 
-input[required]:read-only ~ span.required {
-  display: none;
+[data-nw-validation][required]:placeholder-shown {
+  display: block;
+  background-image: linear-gradient(45deg, transparent, transparent 50%, #ee5f5b 50%, #ee5f5b 100%);
+  background-position: top right;
+  background-size: .6em .6em;
+  background-repeat: no-repeat;
+
 }
 
-textarea[required]:placeholder-shown ~ span.required {
-  display: inline-block;
+[data-nw-validation][data-date-format^="YYYY-MM-DD"]:invalid {
+  background-image: linear-gradient(45deg, transparent, transparent 50%, #ee5f5b 50%, #ee5f5b 100%) !important;
+  background-position: top right !important;
+  background-size: .6em .6em !important;
+  background-repeat: no-repeat !important;
+  display: block !important;
 }
 
-textarea[required]:not(:placeholder-shown) ~ span.required {
-  display: none;
-}
-
-textarea[required]:read-only ~ span.required {
-  display: none;
-}
-
-select[required] ~ span.required {
-  display: inline-block;
-}
-
-select[required][readonly] ~ span.required {
-  display: none;
-}
-
-select[required]:invalid ~ span.required {
-  display: inline-block;
-}
-
-select[required]:valid ~ span.required {
-  display: none;
-}
-
-input[required][type='radio'] ~ span.required {
-  display: inline-block;
-}
-
-input[required][type='radio'][readonly] ~ span.required {
-  display: none;
-}
-
-input[required][type='radio']:invalid ~ span.required {
-  display: inline-block;
-}
-
-input[required][type='radio']:valid ~ span.required {
-  display: none;
-}
-
-input[required][type='checkbox'] ~ span.required {
-  display: inline-block;
-}
-
-input[required][type='checkbox'][readonly] ~ span.required {
-  display: none;
-}
-
-input[required][type='checkbox']:invalid ~ span.required {
-  display: inline-block;
-}
-
-input[required][type='checkbox']:valid ~ span.required {
-  display: none;
-}
-
-/* invalid */
-input:invalid:placeholder-shown ~ span.invalid {
-  display: none;
-}
-
-input:valid:not(:placeholder-shown) ~ span.invalid {
-  display: none;
-}
-
-input:read-only ~ span.invalid {
-  display: none;
-}
-
-textarea:invalid:placeholder-shown ~ span.invalid {
-  display: none;
-}
-
-textarea:valid:not(:placeholder-shown) ~ span.invalid {
-  display: none;
-}
-
-textarea:read-only ~ span.invalid {
-  display: none;
+[data-nw-validation][required]:not([data-date-format^="YYYY-MM-DD"]):not(:placeholder-shown) {
+  background-image: none !important;
 }
 
 /* anchor style button */
@@ -113,5 +44,64 @@ textarea:read-only ~ span.invalid {
 }
 
 .toggle:checked ~ .modal {
-  display: block;
+  display: flex;
+}
+
+.modal-card {
+  width: 750px;
+}
+
+.modal-card input[type="text"] {
+  min-width: 500px;
+}
+
+/* controls */
+input.input:focus {
+  background-color: lightyellow;
+}
+
+input.input, textarea.textarea {
+  max-width: 600px;
+  min-width: 0;
+}
+
+/* spacers */
+.pb-1 {
+  padding-bottom: 0.25rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+
+.pt-1 {
+  padding-top: 0.25rem !important;
+}
+
+.pt-2 {
+  padding-top: 0.5rem !important;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
+.mt-1 {
+  margin-top: 0.25rem !important;
+}
+
+.mt-2 {
+  margin-top: 0.5rem !important;
+}
+
+.mr-1 {
+  margin-right: 0.25rem !important;
+}
+
+.mr-2 {
+  margin-right: 0.5rem !important;
 }
