--- a/northwind.web.ui/views/_ViewImports.cshtml
+++ b/northwind.web.ui/views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using northwind.web.ui.setup
 @using Microsoft.AspNetCore.Http.Extensions
 @using AutoMapper
+@using cloudscribe.Web.Navigation
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, northwind.web.ui
