Updated gitignore file

--- a/northwind.web.ui/views/Shared/_Layout.cshtml
+++ b/northwind.web.ui/views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
       <a class="navbar-item" asp-controller="Regions" asp-action="Index">
         Regions
       </a>
+      <a class="navbar-item" asp-controller="Reports" asp-action="Index">
+        Reports
+      </a>
     </div>
   </div>
 </nav>
